--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-        <div id="mysidenav" class="sidenav">
+        <div id="mynavigation" class="navigation">
                 <a href="#" class="close">&#9776;</a>
                 <ul id="menu-vertical">
                         <li><a href="#">Couleur menu:</a>
@@ -105,7 +105,6 @@
         <div id="content_wall">
 
                 <form id="wall_form">
-                    <span class="addtext">Ajouter un nouvel article :</span> 
                      <label> 
                              <input type="text" name="title" id="title" placeholder="Titre..." maxlength="20">
                      </label>
