--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
         <div class="menu">
             <div id="profil">
-                <a id="myprofil" href="#">MON PROFIL</a>
+                <a id="myprofil" href="#"><b>MON PROFIL</b></a>
             </div>
             <div id="wall">
-                <a id="mywall" href="#">MON MUR</a>
+                <a id="mywall" href="#"><b>MON MUR</b></a>
             </div>
         </div>
 
@@ -102,7 +102,6 @@
                 <input type="submit" value="Mettre à jour" >
             </form>
         </div>
-        <span id="error_article"></span>
         <div id="content_wall">
 
                 <form id="wall_form">
@@ -119,6 +118,7 @@
                  <br>
                  <div id="articles"></div>
         </div>
+        <span id="error_article"></span>
 
 
     <script src="jquery-3.2.1.min.js"></script>
